# binary-ensemble

./: .gitattributes  .gitignore  .readthedocs.yaml  Cargo.toml  Makefile  README.md  TODO.md  xc
.github/workflows/: ci_cd.yml
ben/: Cargo.toml
ben/src/decode/: mod.rs  read.rs
ben/src/decode/tests/: decode_tests.rs  read_tests.rs
ben/src/encode/: mod.rs  relabel.rs
ben/src/encode/tests/: encode_tests.rs  translate_tests.rs
ben/tests/: test_impls_pipeline.rs  test_pipeline.rs
example/: 100k_CO_chain.jsonl.xben  small_example.jsonl  small_example.jsonl.xben  small_example_re_encode.jsonl.ben
pyben/: .gitignore  Cargo.toml  main.py  pyproject.toml  python_tester.py
pyben/docs/: index.rst
pyben/docs/user/: using_pyben.ipynb
pyben/notebooks/: using_pyben.ipynb
pyben/pyben/: __init__.py  _core.pyi  read.py
pyben/src/: lib.rs
pyben/src/decode/: mod.rs  read.rs
pyben/src/encode/: mod.rs
src/: lib.rs  utils.rs
src/decode/: mod.rs  read.rs
src/decode/tests/: decode_tests.rs
src/encode/: mod.rs  relabel.rs  translate.rs
src/encode/tests/: encode_tests.rs  translate_tests.rs
tests/: test_pipeline.rs
