[package]
name = "binary-ensemble"
version = "0.2.0"
edition = "2021"
authors = ["Peter Rock <peter.r.rock2@gmail.com>"]
exclude = ["example/"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/peterrrock2/binary-ensemble"

description = "A CLI tool for working with and compressing ensembles of districting plans"

[lib]
name = "ben"

[dependencies]
byteorder = "1.5.0"
clap = { version = "^4.5.2", features = ["derive"] }
pcompress = "1.0.7"
pipe = "0.4.0"
serde_json = "^1.0.107"
xz2 = "0.1.7"


[dev-dependencies]
lipsum = "0.9.1"
rand = "^0.8.5"
rand_distr = "^0.4.2"
rand_chacha = "^0.3.1"
