[build-system]
requires    = ["maturin>=0.14"]    # maturin itself (and its deps) will drive the build
build-backend = "maturin"


[project]
name = "pyben"
version = "0.1.0-alpha"
description = "Python bindings for the Binary Ensemble Package."
readme = "README.md"
requires-python = ">=3.11"


[tool.maturin]
python-source = "."
module-name = "pyben._core"
bindings = "pyo3"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*XBEN may take a second*:UserWarning",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "ipywidgets>=8.1.7",
    "maturin>=1.9.6",
    "pytest>=8.4.2",
    "tqdm>=4.67.1",
]
